--- a/jenkins-101/Jenkinsfile
+++ b/jenkins-101/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
             steps {
                 echo "Building.."
                 sh '''
-                cd myapp
-                pip install -r requirements.txt
+                cd jenkins-101\myapp
+                pip install -r jenkins-101\requirements.txt
                 '''
             }
         }
