--- a/jenkins-101/Jenkinsfile
+++ b/jenkins-101/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
             steps {
                 echo "Building.."
                 sh '''
-                cd jenkins-101\myapp
-                pip install -r jenkins-101\requirements.txt
+                cd jenkins-101/myapp
+                pip install -r jenkins-101/requirements.txt
                 '''
             }
         }
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 echo "Testing.."
                 sh '''
-                cd jenkins-101\myapp
+                cd jenkins-101/myapp
                 python3 hello.py
                 python3 hello.py --name=Brad
                 '''
