--- a/jenkins-101/Jenkinsfile
+++ b/jenkins-101/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
                 sh '''
                 cd jenkins-101/myapp
                 python3 hello.py
-                python3 hello.py --name=Brad
+                python3 hello.py --name=Joseph
                 '''
             }
         }
